Fix double scrollbar on linux

--- a/live/src/css/styles.css
+++ b/live/src/css/styles.css
@@ -347,7 +347,6 @@ footer {
 	height: 100%;
 	width: 100%;
 	left: 0;
-	overflow: auto;
 }
 
 .dejavu-dropdown .ab-menu-item {
